@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-28T02:19:00Z",
-  "count" : 344,
+  "timestamp" : "2022-08-10T00:28:40Z",
+  "count" : 324,
   "count_minmax" : [ 116, 344 ],
-  "count_decinc" : [ -0, +344 ],
+  "count_decinc" : [ -20, +344 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
